Fixed alignment

--- a/CVApp/wwwroot/css/About.css
+++ b/CVApp/wwwroot/css/About.css
@@ -59,11 +59,6 @@ ul {
     grid-gap: 1vw;
 }
 
-.text-wrapper{
-    width: 70%;
-    margin-left: 10%;
-}
-
 .bio {
    margin-bottom: 50%;
    margin-left: 10%;
@@ -77,6 +72,8 @@ ul {
 .bio p {
     display: none;
     margin-bottom: 50%;
+    font-size:3vh;
+    font-family:sans-serif;
 }
 
 .bio h1 {
@@ -158,6 +155,7 @@ ul {
 .tech {
     width: auto;
     height: 6vh;
+    margin-top: 20%;
 }
 
 @media screen and (min-width: 40em) {
@@ -203,6 +201,10 @@ img {
     padding: 0;
 }
 
+.card
+{
+    width: 80%;
+}
 .cards_item {
     display: flex;
     padding: 1rem;
